# Skald

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python-package.yaml
changelog/: 1.added.md  14.added  14.changed  15.added.md  16.added.md  19.misc  2.misc.md  20.misc  21.fixed  22.fixed  23.misc  5.doc.md  6.feature.md  8.added.md  8.fixed.md
skald/: __init__.py  cli.py  enums.py  exceptions.py  tui.py  tui.tcss  utils.py
tests/: __init__.py  benchmarks.csv  benchmarks.py  conftest.py  crawling_test.py  logger_test.py
